Bug 704094 - Inspector DOM view based on DOM object actor grips and variablesView

--- a/browser/locales/en-US/chrome/browser/devtools/inspector.properties
+++ b/browser/locales/en-US/chrome/browser/devtools/inspector.properties
@@ -44,5 +44,9 @@ markupView.more.showing=Some nodes were hidden.
 markupView.more.showAll=Show All %S Nodes
 inspector.tooltip=DOM and Style Inspector
 
-#LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+# LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 previewTooltip.image.brokenImage=Could not load the image
+
+# LOCALIZATION NOTE (dominspector.searchPlaceholder): Used as the search
+# placeholder in the inspector's DOM view
+dominspector.searchPlaceholder=Filter properties
